Přidání nové entity Genre + možnost zobrazení detailu filmu